
# ChangeLog file for package data_test
# ------------------------------------
# New repository data_test added to git on 2023-10-20

Tag: V00-00-03
2023-11-07 Mikhail Dubrovin
- modified: examples/ex01.py
- added:
  xtc/data-xcsl1004621-r0010-3events-epix10kaquad.xtc
  xtc/data-xppl1001021-r0023-3events-epix100a-1-5.xtc
  xtc/data-xppl1001021-r0023-3events-jungfrau1m.xtc
  xtc/data-xppn4116-r0137-3events-epix100a.xtc
  xtc/data-xppn4116-r0137-3events-opal1000.xtc

Tag: V00-00-02
2023-10-23 Mikhail Dubrovin
- add absolute_path and example
  - add src/absolute_path.py
  - add SConscript for scons src/absolute_path.py
  - examples/ex01.py - use absolute_path.py

Tag: V00-00-01
2023-10-20 Mikhail Dubrovin
- README.md
- doc/ChangeLog
- examples/ex01.py - example testing xppn4116_run137_3events.xtc
- xtc/xppn4116_run137_3events.xtc - epix100a, 3 event for unitest of the major Detector algorithms
EOF