@@ -1,2 +1,12 @@
 # data_test
-Contains large xtc, hdf5 data files for test purpose. 
+Contains large xtc, hdf5 data files for test purpose.
+
+Command from repository git@github.com:slaclab/anarel-manage.git
+
+bin/ana-rel-admin --force --cmd psana-conda-src --name 4.0.56 --basedir `pwd`
+
+will clone this repo as
+git clone git@github.com:lcls-psana/data_test /tmp/data_test
+
+Code for access methods and examples will live with other psana repositories in
+git clone git@github.com:lcls-psana/data_test_access
